PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Oct 2008, PHP 5.2.7RC2
- Fixed bug #46292 (PDO::setFetchMode() shouldn't requires the 2nd arg when 
  using FETCH_CLASSTYPE). (Felipe)
- Fixed bug #46274, #46249 (pdo_pgsql always fill in NULL for empty BLOB and 
  segfaults when returned by SELECT). (Felipe)
- Fixed bug #46271 (local_cert option is not resolved to full path). (Ilia)
- Fixed bug #46246 (difference between call_user_func(array($this, $method))
  and $this->$method()). (Dmitry)
- Fixed bug #46139 (PDOStatement->setFetchMode() forgets FETCH_PROPS_LATE).
  (chsc at peytz dot dk, Felipe)
- Fixed bug #46026 (bzip2.decompress/zlib.inflate filter tries to decompress
  after end of stream). (Keisial at gmail dot com, Greg)
- Fixed buf #45722 (mb_check_encoding() crashes). (Moriyoshi)
- Fixed bug #44251, #41125 (PDO + quote() + prepare() can result in segfault).
  (tsteiner at nerdclub dot net)
- Fixed bug #43723 (SOAP not sent properly from client for <choice>). (Dmitry)
- Fixed bug #42862 (IMAP toolkit crash: rfc822.c legacy routine buffer
  overflow). (Dmitry)
- Fixed bug #42078 (pg_meta_data mix tables metadata from different schemas).
  (Felipe)
- Fixed bug #37100 (data is returned truncated with BINARY CURSOR). (Tony)
- Fixed bug #24679 (pg_* functions doesn't work using schema). (Felipe)

09 Oct 2008, PHP 5.2.7RC1
- Reverted fix for bug #44197 due to behaviour change in minor version.
  (Felipe)

- Added "PHP_INI_SCAN_DIR" environment variable which can be used to either
  disable or change the compile time ini scan directory (FR #45114). (Jani)

- Fixed security issues detailed in CVE-2008-2665 and CVE-2008-2666.
  (Christian Hoffmann)
- Fixed simplexml asXML() not to lose encoding when dumping entire document
  to file. (Ilia)
- Fixed a crash inside PDO when trying instantiate PDORow manually. (Felipe)